FIx button spacing and page body height

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
     "header"
     "body"
     "footer";
-  grid-template-rows: minmax(60px, 20%) minmax(400px, 70%) minmax(60px, 20%);
+  grid-template-rows: minmax(60px, 15%) minmax(400px, 70%) minmax(60px, 15%);
 }
 header {
   grid-area: header;
@@ -132,6 +132,7 @@ hr {
 }
 #footer {
   display: flex;
+  justify-content: center;
 }
 #submitBtn,
 #closeBtn {
@@ -159,6 +160,9 @@ hr {
   justify-content: space-evenly;
   align-self: center;
   margin-bottom: 50px;
+  width: 60%;
+  max-width: 600px;
+  min-width: 300px;
 }
 
 #newBook_Form > div > input {
